<resources>
    <string name="app_name">Shelter</string>
    <string name="edit_name">Add A Pet</string>
    <string name="overview">Overview</string>
    <string name="hintName">Name</string>
    <string name="hintBreed">Breed</string>
    <string name="gender">Gender</string>
    <string name="measure">Measurement</string>
    <string name="weight">Weight</string>
    <string name="unit">kg</string>
    <string name="dummy">Insert dummy data</string>
    <string name="delete_all">Delete all entries</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
</resources>
